--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="#00FFFFFF"
-    tools:context=".activities.reader.ReaderActivity">
+    tools:context=".activities.reader_activity.ReaderActivity">
 
     <include layout="@layout/progress_overlay" />
 
