--- a/app/src/main/res/layout/activity_add_books.xml
+++ b/app/src/main/res/layout/activity_add_books.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="#00FFFFFF"
-    tools:context=".activities.settings.SettingsActivity">
+    tools:context=".activities.settings_activity.SettingsActivity">
 
     <include layout="@layout/progress_overlay" />
 
