--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -7,6 +7,7 @@
     <dimen name="heading1Text">40sp</dimen>
     <dimen name="bodyText">20sp</dimen>
 
-    <dimen name="bookListRowHeight">90dp</dimen>
-    <dimen name="bookListRowCoverWidth">60dp</dimen>
+    <dimen name="listRowHeight">90dp</dimen>
+    <dimen name="listRowCoverWidth">60dp</dimen>
+    <dimen name="listRowTextMaxWidth">250dp</dimen>
 </resources>
