--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -75,6 +75,7 @@
                 android:id="@+id/bookmark_list"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/listRowHeight"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/componentSpacing" />
         </LinearLayout>
