--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -76,6 +76,7 @@
                 android:id="@+id/book_list"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/listRowHeight"
                 android:layout_weight="1"
                 android:paddingTop="@dimen/componentSpacing" />
         </LinearLayout>
