Enhance settings screen

--- a/app/src/main/res/layout/bookmarks_tab.xml
+++ b/app/src/main/res/layout/bookmarks_tab.xml
@@ -25,6 +25,7 @@
                 android:layout_marginHorizontal="@dimen/globalSpacing"
                 android:layout_marginTop="@dimen/componentSpacing"
                 android:background="@drawable/custom_searchview"
+                android:paddingTop="@dimen/componentSpacing"
                 app:iconifiedByDefault="false"
                 app:queryBackground="@null"
                 app:queryHint="Search Here"
