--- a/app/src/main/res/layout/bookmarks_tab.xml
+++ b/app/src/main/res/layout/bookmarks_tab.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundTint="#00FFFFFF"
     android:orientation="vertical"
     tools:context=".screens.home.bookmarks.BookmarksTab">
 
@@ -75,9 +76,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/bookmark_list"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="@dimen/listRowHeight"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/listRowHeight"
                 android:paddingTop="@dimen/componentSpacing" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
