--- a/app/src/main/res/drawable/add_qr_light.xml
+++ b/app/src/main/res/drawable/add_qr_light.xml
@@ -1,5 +1,9 @@
-<vector android:height="100dp" android:viewportHeight="24"
+<vector android:height="100dp"
+    android:viewportHeight="24"
     android:tint="@color/grey_dark"
-    android:viewportWidth="24" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/black" android:pathData="M9,3H3V9H5V5H9V3ZM3,21V15H5V19H9V21H3ZM15,3V5H19V9H21V3H15ZM19,15H21V21H15V19H19V15ZM7,7H11V11H7V7ZM7,13H11V17H7V13ZM17,7H13V11H17V7ZM13,13H17V17H13V13Z"/>
+    android:viewportWidth="24"
+    android:width="100dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/black"
+        android:pathData="M9,3H3V9H5V5H9V3ZM3,21V15H5V19H9V21H3ZM15,3V5H19V9H21V3H15ZM19,15H21V21H15V19H19V15ZM7,7H11V11H7V7ZM7,13H11V17H7V13ZM17,7H13V11H17V7ZM13,13H17V17H13V13Z"/>
 </vector>
