--- a/app/src/main/res/menu/book_clicked.xml
+++ b/app/src/main/res/menu/book_clicked.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/book_overview"
+        android:title="@string/book_overview_spinner" />
+    <item
         android:id="@+id/delete_book"
         android:title="@string/delete_book_spinner" />
 </menu>
