--- a/app/src/main/res/drawable/add_file_light.xml
+++ b/app/src/main/res/drawable/add_file_light.xml
@@ -1,10 +1,13 @@
-<vector
-    android:height="100dp"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="100dp"
-    android:viewportHeight="61"
-    android:viewportWidth="61"
+    android:height="100dp"
     android:tint="@color/grey_dark"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/black" android:pathData="M49.561,16.464H39.45v6h10.111c3.008,0 5.341,1.535 5.341,2.857v26.607c0,1.321 -2.333,2.858 -5.341,2.858H11.34c-3.007,0 -5.34,-1.537 -5.34,-2.858V25.324c0,-1.322 2.333,-2.858 5.34,-2.858h10.11v-6H11.34C4.981,16.466 0,20.357 0,25.324v26.605c0,4.968 4.981,8.857 11.34,8.857h38.223c6.357,0 11.34,-3.891 11.34,-8.857V25.324C60.902,20.355 55.921,16.464 49.561,16.464z"/>
-    <path android:fillColor="@color/black" android:pathData="M39.529,29.004c-0.768,0 -1.535,0.294 -2.121,0.88l-3.756,3.755V20.612v-6V3.117c0,-1.656 -1.343,-3 -3,-3s-3,1.344 -3,3v11.494v6v13.23l-3.959,-3.958c-0.586,-0.586 -1.354,-0.88 -2.121,-0.88s-1.535,0.294 -2.121,0.88c-1.172,1.17 -1.172,3.07 0,4.241l8.957,8.957c0.586,0.586 1.354,0.877 2.12,0.877c0.008,0 0.016,0 0.023,0s0.015,0 0.022,0c0.768,0 1.534,-0.291 2.12,-0.877l8.957,-8.957c1.172,-1.171 1.172,-3.071 0,-4.241C41.064,29.298 40.298,29.004 39.529,29.004z"/>
+    android:viewportWidth="61"
+    android:viewportHeight="61">
+    <path
+        android:fillColor="@color/black"
+        android:pathData="M49.561,16.464H39.45v6h10.111c3.008,0 5.341,1.535 5.341,2.857v26.607c0,1.321 -2.333,2.858 -5.341,2.858H11.34c-3.007,0 -5.34,-1.537 -5.34,-2.858V25.324c0,-1.322 2.333,-2.858 5.34,-2.858h10.11v-6H11.34C4.981,16.466 0,20.357 0,25.324v26.605c0,4.968 4.981,8.857 11.34,8.857h38.223c6.357,0 11.34,-3.891 11.34,-8.857V25.324C60.902,20.355 55.921,16.464 49.561,16.464z" />
+    <path
+        android:fillColor="@color/black"
+        android:pathData="M39.529,29.004c-0.768,0 -1.535,0.294 -2.121,0.88l-3.756,3.755V20.612v-6V3.117c0,-1.656 -1.343,-3 -3,-3s-3,1.344 -3,3v11.494v6v13.23l-3.959,-3.958c-0.586,-0.586 -1.354,-0.88 -2.121,-0.88s-1.535,0.294 -2.121,0.88c-1.172,1.17 -1.172,3.07 0,4.241l8.957,8.957c0.586,0.586 1.354,0.877 2.12,0.877c0.008,0 0.016,0 0.023,0s0.015,0 0.022,0c0.768,0 1.534,-0.291 2.12,-0.877l8.957,-8.957c1.172,-1.171 1.172,-3.071 0,-4.241C41.064,29.298 40.298,29.004 39.529,29.004z" />
 </vector>
